Improve join us page responsiveness

--- a/src/components/job/position.astro
+++ b/src/components/job/position.astro
@@ -31,71 +31,55 @@ const {
 }: Props = Astro.props;
 ---
 
-<div class="flex flex-col gap-10 lg:ml-auto">
-    <div class="overflow-hidden w-screen-2/3 lg:w-screen-1/4 flex flex-col border-4 border-blue-log rounded-[42px]">
+<div class="flex flex-col gap-10">
+    <div class="overflow-hidden max-w-112 xl:w-120 flex flex-col border-4 border-blue-log rounded-4xl">
         <img class="w-full" src={PosteReference} width="472" height="261" alt="" />
-        <h1 class="text-2xl font-bold p-4">LE POSTE</h1>
-        <div class="grid grid-cols-8 content-around text-xl leading-10 p-4">
-            <div class="col-start-1 col-span-1">
-                <svg class="w-8 h-8 fill-blue-log" viewBox="0 0 108.11 148.06"><path d="M108.11 5.96l-5.76 27.05c-5.53-5.53-13.61-8.3-24.22-8.3s-19.21 3.81-25.78 11.43c-3.71 4.3-6.35 9.67-7.91 16.11h53.71l-3.12 15.14H42.49c-.07 1.5-.1 3.42-.1 5.76s.06 4.66.2 7.13H92.3l-3.12 15.14H44.65c1.63 6.97 4.13 12.44 7.52 16.41 6.51 7.68 14.97 11.52 25.39 11.52 12.5 0 22.46-3.84 29.88-11.52v29.88c-8.46 4.23-18.33 6.35-29.59 6.35-19.01 0-34.64-6.51-46.88-19.53-8.33-8.85-13.83-19.89-16.5-33.11H0l3.12-15.14h9.57a111.67 111.67 0 0 1-.1-4.98c0-2.99.06-5.63.2-7.91H0l3.12-15.14h11.62c2.73-12.95 8.17-23.79 16.31-32.52C43.36 6.58 59.54 0 79.59 0c10.94 0 20.44 1.99 28.52 5.96z"/></svg>
-            </div>
-            <div class="col-start-2 col-span-8">
+        <h1 class="text-xl md:text-2xl font-bold p-4">LE POSTE</h1>
+        <ul class="flex flex-col gap-4 text-lg md:text-xl p-4">
+            <li class="inline-flex gap-2">
+                <svg class="w-8 h-8 shrink-0 fill-blue-log" viewBox="0 0 108.11 148.06"><path d="M108.11 5.96l-5.76 27.05c-5.53-5.53-13.61-8.3-24.22-8.3s-19.21 3.81-25.78 11.43c-3.71 4.3-6.35 9.67-7.91 16.11h53.71l-3.12 15.14H42.49c-.07 1.5-.1 3.42-.1 5.76s.06 4.66.2 7.13H92.3l-3.12 15.14H44.65c1.63 6.97 4.13 12.44 7.52 16.41 6.51 7.68 14.97 11.52 25.39 11.52 12.5 0 22.46-3.84 29.88-11.52v29.88c-8.46 4.23-18.33 6.35-29.59 6.35-19.01 0-34.64-6.51-46.88-19.53-8.33-8.85-13.83-19.89-16.5-33.11H0l3.12-15.14h9.57a111.67 111.67 0 0 1-.1-4.98c0-2.99.06-5.63.2-7.91H0l3.12-15.14h11.62c2.73-12.95 8.17-23.79 16.31-32.52C43.36 6.58 59.54 0 79.59 0c10.94 0 20.44 1.99 28.52 5.96z"/></svg>
                 <p>Salaire: {salary}</p>
-            </div>
-            <div class="col-start-1 col-span-1">
-                <svg class="w-8 h-8 fill-blue-log" viewBox="0 0 160.5 147.91"><path d="M131.2 103.94a3.69 3.69 0 0 1 7.38 0v16.55l7.24 5.63c1.61 1.25 1.9 3.57.65 5.17-1.25 1.61-3.57 1.9-5.17.65l-8.55-6.65c-.93-.67-1.55-1.77-1.55-3zm8.67-13.21V34.34H0v83.99c0 3.07 1.08 5.84 2.83 7.82 1.63 1.85 3.85 3.01 6.26 3.01h94.56c-.4-2.04-.61-4.15-.61-6.3 0-8.94 3.63-17.04 9.5-22.92 6.82-6.14 13.54-9.51 22.93-9.51 1.49 0 2.96.1 4.4.3zm-22.12 14.42c-4.53 4.53-7.33 10.79-7.33 17.72s2.8 13.18 7.33 17.71a24.96 24.96 0 0 0 35.42 0 24.96 24.96 0 0 0 0-35.42 24.96 24.96 0 0 0-17.71-7.33c-6.92 0-13.19 2.8-17.72 7.33h0zm-44.01-9.57a3.69 3.69 0 0 1 7.38 0v6.48c0 3.35-1.38 6.4-3.58 8.61-2.23 2.22-5.28 3.6-8.63 3.6h-6.48a3.69 3.69 0 0 1 0-7.38h6.48c1.33 0 2.54-.54 3.42-1.41a4.82 4.82 0 0 0 1.41-3.42zm-42.62 0a3.69 3.69 0 0 1 7.38 0v6.48c0 3.35-1.38 6.4-3.58 8.61-2.23 2.22-5.28 3.6-8.63 3.6h-6.48a3.69 3.69 0 0 1 0-7.38h6.48c1.33 0 2.54-.54 3.42-1.41a4.82 4.82 0 0 0 1.41-3.42zm85.24-42.62a3.69 3.69 0 0 1 7.38 0v6.47c0 3.36-1.38 6.42-3.58 8.63-2.21 2.21-5.27 3.59-8.63 3.59h-6.48a3.69 3.69 0 0 1 0-7.38h6.48c1.33 0 2.54-.55 3.41-1.42s1.42-2.08 1.42-3.41v-6.47h0zm-42.62 0a3.69 3.69 0 0 1 7.38 0v6.47c0 3.36-1.38 6.42-3.58 8.63-2.21 2.21-5.27 3.59-8.63 3.59h-6.48a3.69 3.69 0 0 1 0-7.38h6.48c1.33 0 2.54-.55 3.41-1.42s1.42-2.08 1.42-3.41v-6.47h0zm-42.62 0a3.69 3.69 0 0 1 7.38 0v6.47c0 3.36-1.38 6.42-3.58 8.63-2.21 2.21-5.27 3.59-8.63 3.59h-6.48a3.69 3.69 0 0 1 0-7.38h6.48c1.33 0 2.54-.55 3.41-1.42s1.42-2.08 1.42-3.41v-6.47h0zM139.87 27v-5.06c0-3.07-1.08-5.84-2.83-7.82-1.63-1.85-3.85-3.01-6.26-3.01h-.4v1.43a9.6 9.6 0 0 1-2.82 6.8c-1.98 1.8-4.07 2.82-6.8 2.82s-5.06-1.08-6.8-2.82c-1.8-1.98-2.82-4.07-2.82-6.8v-1.43h-6.16v1.43c0 2.65-1.08 5.06-2.83 6.8a9.6 9.6 0 0 1-6.8 2.82c-2.65 0-5.04-1.08-6.79-2.82-1.75-1.76-2.84-4.16-2.84-6.8v-1.43H54.15v1.43a9.6 9.6 0 0 1-2.82 6.8 9.6 9.6 0 0 1-6.8 2.82c-2.65 0-5.04-1.08-6.79-2.82s-2.84-4.15-2.84-6.8v-1.43h-6.16v1.43c0 2.65-1.08 5.06-2.83 6.8a9.6 9.6 0 0 1-6.8 2.82c-2.65 0-5.04-1.08-6.79-2.82-1.75-1.76-2.84-4.16-2.84-6.8v-1.43h-.39c-2.41 0-4.63 1.15-6.26 3.01C1.08 16.1 0 18.87 0 21.94V27zM20.7.65c-.4-.4-.97-.65-1.59-.65a2.23 2.23 0 0 0-1.58.65c-.41.41-.66.97-.66 1.59v10.3a2.27 2.27 0 0 0 .65 1.59 2.27 2.27 0 0 0 1.59.65c.62 0 1.18-.25 1.58-.66a2.23 2.23 0 0 0 .66-1.58V2.24A2.27 2.27 0 0 0 20.7.65zM44.52 0c-.61 0-1.18.25-1.58.66a2.23 2.23 0 0 0-.66 1.58v10.3c0 .61.25 1.18.66 1.58.4.41.96.66 1.58.66s1.18-.25 1.58-.66c.4-.4.66-.97.66-1.58V2.24c0-.56-.21-1.08-.6-1.53C45.7.25 45.14 0 44.53 0h0zm77.81.66c-.4-.4-.97-.66-1.58-.66s-1.18.25-1.58.66c-.41.4-.66.96-.66 1.58v10.3a2.27 2.27 0 0 0 .55 1.48c.5.48.97.76 1.69.76a2.25 2.25 0 0 0 1.48-.55c.48-.5.76-.97.76-1.69V2.24c0-.61-.25-1.18-.66-1.58zm-25.4 0c-.4-.41-.97-.65-1.59-.65a2.23 2.23 0 0 0-1.58.65c-.41.41-.66.97-.66 1.59v10.3a2.27 2.27 0 0 0 .65 1.59 2.27 2.27 0 0 0 1.59.65c.62 0 1.18-.25 1.58-.66a2.23 2.23 0 0 0 .66-1.58V2.25a2.27 2.27 0 0 0-.65-1.59z"/></svg>
-            </div>
-            <div class="col-start-2 col-span-8">
+            </li>
+            <li class="inline-flex gap-2">
+                <svg class="w-8 h-8 shrink-0 fill-blue-log" viewBox="0 0 160.5 147.91"><path d="M131.2 103.94a3.69 3.69 0 0 1 7.38 0v16.55l7.24 5.63c1.61 1.25 1.9 3.57.65 5.17-1.25 1.61-3.57 1.9-5.17.65l-8.55-6.65c-.93-.67-1.55-1.77-1.55-3zm8.67-13.21V34.34H0v83.99c0 3.07 1.08 5.84 2.83 7.82 1.63 1.85 3.85 3.01 6.26 3.01h94.56c-.4-2.04-.61-4.15-.61-6.3 0-8.94 3.63-17.04 9.5-22.92 6.82-6.14 13.54-9.51 22.93-9.51 1.49 0 2.96.1 4.4.3zm-22.12 14.42c-4.53 4.53-7.33 10.79-7.33 17.72s2.8 13.18 7.33 17.71a24.96 24.96 0 0 0 35.42 0 24.96 24.96 0 0 0 0-35.42 24.96 24.96 0 0 0-17.71-7.33c-6.92 0-13.19 2.8-17.72 7.33h0zm-44.01-9.57a3.69 3.69 0 0 1 7.38 0v6.48c0 3.35-1.38 6.4-3.58 8.61-2.23 2.22-5.28 3.6-8.63 3.6h-6.48a3.69 3.69 0 0 1 0-7.38h6.48c1.33 0 2.54-.54 3.42-1.41a4.82 4.82 0 0 0 1.41-3.42zm-42.62 0a3.69 3.69 0 0 1 7.38 0v6.48c0 3.35-1.38 6.4-3.58 8.61-2.23 2.22-5.28 3.6-8.63 3.6h-6.48a3.69 3.69 0 0 1 0-7.38h6.48c1.33 0 2.54-.54 3.42-1.41a4.82 4.82 0 0 0 1.41-3.42zm85.24-42.62a3.69 3.69 0 0 1 7.38 0v6.47c0 3.36-1.38 6.42-3.58 8.63-2.21 2.21-5.27 3.59-8.63 3.59h-6.48a3.69 3.69 0 0 1 0-7.38h6.48c1.33 0 2.54-.55 3.41-1.42s1.42-2.08 1.42-3.41v-6.47h0zm-42.62 0a3.69 3.69 0 0 1 7.38 0v6.47c0 3.36-1.38 6.42-3.58 8.63-2.21 2.21-5.27 3.59-8.63 3.59h-6.48a3.69 3.69 0 0 1 0-7.38h6.48c1.33 0 2.54-.55 3.41-1.42s1.42-2.08 1.42-3.41v-6.47h0zm-42.62 0a3.69 3.69 0 0 1 7.38 0v6.47c0 3.36-1.38 6.42-3.58 8.63-2.21 2.21-5.27 3.59-8.63 3.59h-6.48a3.69 3.69 0 0 1 0-7.38h6.48c1.33 0 2.54-.55 3.41-1.42s1.42-2.08 1.42-3.41v-6.47h0zM139.87 27v-5.06c0-3.07-1.08-5.84-2.83-7.82-1.63-1.85-3.85-3.01-6.26-3.01h-.4v1.43a9.6 9.6 0 0 1-2.82 6.8c-1.98 1.8-4.07 2.82-6.8 2.82s-5.06-1.08-6.8-2.82c-1.8-1.98-2.82-4.07-2.82-6.8v-1.43h-6.16v1.43c0 2.65-1.08 5.06-2.83 6.8a9.6 9.6 0 0 1-6.8 2.82c-2.65 0-5.04-1.08-6.79-2.82-1.75-1.76-2.84-4.16-2.84-6.8v-1.43H54.15v1.43a9.6 9.6 0 0 1-2.82 6.8 9.6 9.6 0 0 1-6.8 2.82c-2.65 0-5.04-1.08-6.79-2.82s-2.84-4.15-2.84-6.8v-1.43h-6.16v1.43c0 2.65-1.08 5.06-2.83 6.8a9.6 9.6 0 0 1-6.8 2.82c-2.65 0-5.04-1.08-6.79-2.82-1.75-1.76-2.84-4.16-2.84-6.8v-1.43h-.39c-2.41 0-4.63 1.15-6.26 3.01C1.08 16.1 0 18.87 0 21.94V27zM20.7.65c-.4-.4-.97-.65-1.59-.65a2.23 2.23 0 0 0-1.58.65c-.41.41-.66.97-.66 1.59v10.3a2.27 2.27 0 0 0 .65 1.59 2.27 2.27 0 0 0 1.59.65c.62 0 1.18-.25 1.58-.66a2.23 2.23 0 0 0 .66-1.58V2.24A2.27 2.27 0 0 0 20.7.65zM44.52 0c-.61 0-1.18.25-1.58.66a2.23 2.23 0 0 0-.66 1.58v10.3c0 .61.25 1.18.66 1.58.4.41.96.66 1.58.66s1.18-.25 1.58-.66c.4-.4.66-.97.66-1.58V2.24c0-.56-.21-1.08-.6-1.53C45.7.25 45.14 0 44.53 0h0zm77.81.66c-.4-.4-.97-.66-1.58-.66s-1.18.25-1.58.66c-.41.4-.66.96-.66 1.58v10.3a2.27 2.27 0 0 0 .55 1.48c.5.48.97.76 1.69.76a2.25 2.25 0 0 0 1.48-.55c.48-.5.76-.97.76-1.69V2.24c0-.61-.25-1.18-.66-1.58zm-25.4 0c-.4-.41-.97-.65-1.59-.65a2.23 2.23 0 0 0-1.58.65c-.41.41-.66.97-.66 1.59v10.3a2.27 2.27 0 0 0 .65 1.59 2.27 2.27 0 0 0 1.59.65c.62 0 1.18-.25 1.58-.66a2.23 2.23 0 0 0 .66-1.58V2.25a2.27 2.27 0 0 0-.65-1.59z"/></svg>
                 <p>Prise de poste le {starting_date.toLocaleDateString()}</p>
-            </div>
-            <div class="col-start-1 col-span-1">
-                <svg class="w-8 h-8 fill-blue-log" viewBox="0 0 126.46 162.25"><path d="M7.92 0h68.77v28.35h28.35v36.66c-2.19-.41-4.44-.63-6.75-.63-19.95 0-36.13 16.17-36.13 36.13 0 9.51 3.67 18.16 9.69 24.61v3.41H7.92A7.94 7.94 0 0 1 0 120.61V7.94A7.94 7.94 0 0 1 7.92.02h0zm76.72 0l20.39 20.39H84.64zm13.65 72.33c15.56 0 28.17 12.61 28.17 28.17s-12.61 28.17-28.17 28.17-28.17-12.61-28.17-28.17 12.61-28.17 28.17-28.17zm0 15.9a12.26 12.26 0 0 1 12.26 12.27c0 6.78-5.49 12.27-12.26 12.27s-12.27-5.49-12.27-12.27a12.27 12.27 0 0 1 12.27-12.27zm0 58.91l18.48 15.11v-30.73c-5.41 3.23-11.73 5.08-18.48 5.08s-13.08-1.86-18.48-5.08v30.73zM16.87 27.44a3.98 3.98 0 1 1 0-7.96h32.99a3.98 3.98 0 1 1 0 7.96zm0 86.26a3.98 3.98 0 1 1 0-7.96h30.09a3.98 3.98 0 1 1 0 7.96zm0-21.56a3.98 3.98 0 1 1 0-7.96h23.18a3.98 3.98 0 1 1 0 7.96zm0-21.57a3.98 3.98 0 1 1 0-7.96h36.87a3.98 3.98 0 1 1 0 7.96zm0-21.57a3.98 3.98 0 0 1 0-7.96h53.11a3.98 3.98 0 0 1 0 7.96z" fill-rule="evenodd"/></svg>
-            </div>
-            <div class="col-start-2 col-span-8">
-                <p class="ml-auto">Expérience : {experience}</p>
-            </div>
-            <div class="col-start-1 col-span-1">
-                <svg class="w-8 h-8 fill-blue-log" viewBox="0 0 160.89 133.68" fill-rule="evenodd"><path d="M51.88 16.84h5.25v-3.72c0-4.35 3.52-7.87 7.87-7.87h30.92c4.35 0 7.87 3.52 7.87 7.87v3.72h5.25v-3.72C109.04 5.88 103.17 0 95.92 0H65c-7.24 0-13.12 5.87-13.12 13.12zM98.01 81.2c-2.06 7.77-9.14 13.5-17.55 13.5s-15.5-5.74-17.56-13.51C43.67 79.86 24.43 76.36 5.2 70.7v57.73a5.25 5.25 0 0 0 5.25 5.25h140.02a5.25 5.25 0 0 0 5.25-5.25V70.7c-19.24 5.68-38.47 9.18-57.71 10.5zm-35.7-5.31c.35-9.71 8.34-17.49 18.14-17.49a18.16 18.16 0 0 1 18.14 17.5c19.54-1.41 39.08-5.12 58.61-11.12a5.25 5.25 0 0 0 3.69-5.01V27.34a5.22 5.22 0 0 0-1.54-3.71c-.98-.98-2.32-1.54-3.71-1.54H5.25a5.22 5.22 0 0 0-3.71 1.54C.56 24.61 0 25.95 0 27.34v32.43c0 2.3 1.5 4.33 3.7 5.01 19.54 5.98 39.07 9.69 58.61 11.11zm31.05.66c0 7.13-5.78 12.91-12.91 12.91s-12.91-5.78-12.91-12.91 5.78-12.91 12.91-12.91 12.91 5.78 12.91 12.91"/></svg>
-            </div>
-            <div class="col-start-2 col-span-8">
+            </li>
+            <li class="inline-flex gap-2">
+                <svg class="w-8 h-8 shrink-0 fill-blue-log" viewBox="0 0 126.46 162.25"><path d="M7.92 0h68.77v28.35h28.35v36.66c-2.19-.41-4.44-.63-6.75-.63-19.95 0-36.13 16.17-36.13 36.13 0 9.51 3.67 18.16 9.69 24.61v3.41H7.92A7.94 7.94 0 0 1 0 120.61V7.94A7.94 7.94 0 0 1 7.92.02h0zm76.72 0l20.39 20.39H84.64zm13.65 72.33c15.56 0 28.17 12.61 28.17 28.17s-12.61 28.17-28.17 28.17-28.17-12.61-28.17-28.17 12.61-28.17 28.17-28.17zm0 15.9a12.26 12.26 0 0 1 12.26 12.27c0 6.78-5.49 12.27-12.26 12.27s-12.27-5.49-12.27-12.27a12.27 12.27 0 0 1 12.27-12.27zm0 58.91l18.48 15.11v-30.73c-5.41 3.23-11.73 5.08-18.48 5.08s-13.08-1.86-18.48-5.08v30.73zM16.87 27.44a3.98 3.98 0 1 1 0-7.96h32.99a3.98 3.98 0 1 1 0 7.96zm0 86.26a3.98 3.98 0 1 1 0-7.96h30.09a3.98 3.98 0 1 1 0 7.96zm0-21.56a3.98 3.98 0 1 1 0-7.96h23.18a3.98 3.98 0 1 1 0 7.96zm0-21.57a3.98 3.98 0 1 1 0-7.96h36.87a3.98 3.98 0 1 1 0 7.96zm0-21.57a3.98 3.98 0 0 1 0-7.96h53.11a3.98 3.98 0 0 1 0 7.96z" fill-rule="evenodd"/></svg>
+                <p>Expérience : {experience}</p>
+            </li>
+            <li class="inline-flex gap-2">
+                <svg class="w-8 h-8 shrink-0 fill-blue-log" viewBox="0 0 160.89 133.68" fill-rule="evenodd"><path d="M51.88 16.84h5.25v-3.72c0-4.35 3.52-7.87 7.87-7.87h30.92c4.35 0 7.87 3.52 7.87 7.87v3.72h5.25v-3.72C109.04 5.88 103.17 0 95.92 0H65c-7.24 0-13.12 5.87-13.12 13.12zM98.01 81.2c-2.06 7.77-9.14 13.5-17.55 13.5s-15.5-5.74-17.56-13.51C43.67 79.86 24.43 76.36 5.2 70.7v57.73a5.25 5.25 0 0 0 5.25 5.25h140.02a5.25 5.25 0 0 0 5.25-5.25V70.7c-19.24 5.68-38.47 9.18-57.71 10.5zm-35.7-5.31c.35-9.71 8.34-17.49 18.14-17.49a18.16 18.16 0 0 1 18.14 17.5c19.54-1.41 39.08-5.12 58.61-11.12a5.25 5.25 0 0 0 3.69-5.01V27.34a5.22 5.22 0 0 0-1.54-3.71c-.98-.98-2.32-1.54-3.71-1.54H5.25a5.22 5.22 0 0 0-3.71 1.54C.56 24.61 0 25.95 0 27.34v32.43c0 2.3 1.5 4.33 3.7 5.01 19.54 5.98 39.07 9.69 58.61 11.11zm31.05.66c0 7.13-5.78 12.91-12.91 12.91s-12.91-5.78-12.91-12.91 5.78-12.91 12.91-12.91 12.91 5.78 12.91 12.91"/></svg>
                 <p>Métier : {job_name}</p>
-            </div>
-            <div class="col-start-1 col-span-1">
-                <svg class="w-8 h-8 fill-blue-log" viewBox="0 0 125.98 138.94"><path d="M63 72.07c18.6 0 33.73-19.74 33.73-38.34S81.6 0 63 0 29.27 15.13 29.27 33.73 44.4 72.07 63 72.07zm25.31.35a38.74 38.74 0 0 1-23.54 7.95h-3.55c-8.84 0-17.01-2.97-23.55-7.95C16.31 75.87 0 94.39 0 116.72c0 12.27 28.2 22.22 62.99 22.22s62.99-9.95 62.99-22.22c0-22.33-16.31-40.85-37.67-44.3z"/></svg>
-            </div>
-            <div class="col-start-2 col-span-8">
+            </li>
+            <li class="inline-flex gap-2">
+                <svg class="w-8 h-8 shrink-0 fill-blue-log" viewBox="0 0 125.98 138.94"><path d="M63 72.07c18.6 0 33.73-19.74 33.73-38.34S81.6 0 63 0 29.27 15.13 29.27 33.73 44.4 72.07 63 72.07zm25.31.35a38.74 38.74 0 0 1-23.54 7.95h-3.55c-8.84 0-17.01-2.97-23.55-7.95C16.31 75.87 0 94.39 0 116.72c0 12.27 28.2 22.22 62.99 22.22s62.99-9.95 62.99-22.22c0-22.33-16.31-40.85-37.67-44.3z"/></svg>
                 <p>Statut du poste : {job_status}</p>
-            </div>
-            <div class="col-start-1 col-span-1">
-                <svg class="w-8 h-8 fill-blue-log" viewBox="0 0 114.57 151.49"><path d="M102.855 22.47C91.945 8.14 75.255 0 57.285 0s-34.66 8.13-45.57 22.47a57.46 57.46 0 0 0 0 69.54l45.57 59.48 45.57-59.48a57.46 57.46 0 0 0 0-69.54zm-45.57 3.42c16.48 0 29.95 13.48 29.95 29.95s-13.48 29.95-29.95 29.95-29.95-13.48-29.95-29.95 13.48-29.95 29.95-29.95z"/></svg>
-            </div>
-            <div class="col-start-2 col-span-8">
+            </li>
+            <li class="inline-flex gap-2">
+                <svg class="w-8 h-8 shrink-0 fill-blue-log" viewBox="0 0 114.57 151.49"><path d="M102.855 22.47C91.945 8.14 75.255 0 57.285 0s-34.66 8.13-45.57 22.47a57.46 57.46 0 0 0 0 69.54l45.57 59.48 45.57-59.48a57.46 57.46 0 0 0 0-69.54zm-45.57 3.42c16.48 0 29.95 13.48 29.95 29.95s-13.48 29.95-29.95 29.95-29.95-13.48-29.95-29.95 13.48-29.95 29.95-29.95z"/></svg>
                 <p>Zone de déplacement : {travel_area}</p>
-            </div>
-            <div class="col-start-1 col-span-1">
-                <svg class="w-8 h-8 fill-blue-log" viewBox="0 0 139.535 139.529"><path d="M122.36 17.175c-22.9-22.9-60.03-22.9-82.92 0-20.85 20.85-22.71 53.5-5.58 76.46l-31.37 31.37c-3.32 3.32-3.32 8.71 0 12.03s8.71 3.33 12.04 0l31.37-31.37c22.96 17.13 55.61 15.28 76.46-5.58 22.9-22.9 22.9-60.03 0-82.92h0zm-15.16 15.16c-14.5-14.5-38.1-14.5-52.61 0-1.66 1.66-4.36 1.66-6.02 0s-1.66-4.36 0-6.02c17.82-17.82 46.82-17.82 64.64 0 1.66 1.66 1.66 4.36 0 6.02s-4.36 1.66-6.02 0h0z"/></svg>
-            </div>
-            <div class="col-start-2 col-span-8">
-                <p class="ml-auto">Secteur d'activité du poste : {job_sector}</p>
-            </div>
-            <div class="col-start-1 col-span-1">
-                <svg class="w-8 h-8 fill-blue-log" viewBox="0 0 154.06 138.98" fill-rule="evenodd"><path d="M0 91.89h154.06v16.46H0zM0 0v85.95h154.06V0zm99.66 131.21h13.71c5.49 0 5.49 7.77 0 7.77H40.22c-5.03 0-5.03-7.77 0-7.77h14.17l4.57-17.83h36.12l4.57 17.83z"/></svg>
-            </div>
-            <div class="col-start-2 col-span-8">
+            </li>
+            <li class="inline-flex gap-2">
+                <svg class="w-8 h-8 shrink-0 fill-blue-log" viewBox="0 0 139.535 139.529"><path d="M122.36 17.175c-22.9-22.9-60.03-22.9-82.92 0-20.85 20.85-22.71 53.5-5.58 76.46l-31.37 31.37c-3.32 3.32-3.32 8.71 0 12.03s8.71 3.33 12.04 0l31.37-31.37c22.96 17.13 55.61 15.28 76.46-5.58 22.9-22.9 22.9-60.03 0-82.92h0zm-15.16 15.16c-14.5-14.5-38.1-14.5-52.61 0-1.66 1.66-4.36 1.66-6.02 0s-1.66-4.36 0-6.02c17.82-17.82 46.82-17.82 64.64 0 1.66 1.66 1.66 4.36 0 6.02s-4.36 1.66-6.02 0h0z"/></svg>
+                <p>Secteur d'activité du poste : {job_sector}</p>
+            </li>
+            <li class="inline-flex gap-2">
+                <svg class="w-8 h-8 shrink-0 fill-blue-log" viewBox="0 0 154.06 138.98" fill-rule="evenodd"><path d="M0 91.89h154.06v16.46H0zM0 0v85.95h154.06V0zm99.66 131.21h13.71c5.49 0 5.49 7.77 0 7.77H40.22c-5.03 0-5.03-7.77 0-7.77h14.17l4.57-17.83h36.12l4.57 17.83z"/></svg>
                 <p>Télétravail : {telework}</p>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
-    <a class="bg-blue-log rounded-xl text-center font-extrabold text-white text-3xl py-4" href={`mailto:${hr_email}`}>Postulez</a>
-    <div class="bg-blue-log rounded-[42px] text-center text-white font-extrabold mt-[calc(3.75vw+1rem)] pt-24 pb-8 px-8">
-        <div class="overflow-hidden absolute translate-x-[calc(23.3333vw-2rem)] lg:translate-x-[calc(8.75vw-2rem)] -translate-y-[calc(10vw+6rem)] lg:-translate-y-[calc(3.75vw+6rem)] bg-white rounded-3xl w-screen-1/5 lg:w-screen-3/40 h-screen-1/5 lg:h-screen-3/40 p-1">
+    <a class="bg-blue-log rounded-xl text-center font-extrabold text-white text-2xl md:text-3xl py-4" href={`mailto:${hr_email}`}>Postulez</a>
+    <div class="bg-blue-log rounded-4xl text-center text-white font-extrabold mt-22 pt-24 pb-8 px-8">
+        <div class="overflow-hidden absolute left-0 xl:left-auto right-0 xl:right-auto mx-auto xl:mx-0 xl:translate-x-34 -translate-y-42 bg-white rounded-3xl w-36 h-36 p-1">
             <div class="overflow-hidden bg-gray-log rounded-3xl w-full h-full">
                 <img class="object-cover" src={hr_picture} alt="" />
             </div>
         </div>
-        <h2 class="text-2xl mb-8">Responsable de l'offre</h2>
-        <p class="text-3xl mb-8">{hr_name}</p>
-        <a class="font-normal text-lg hover:underline hover:underline-offset-4" href={`tel:${hr_phone}`}>{hr_phone}</a><br />
-        <a class="font-normal text-lg hover:underline hover:underline-offset-4" href={`mailto:${hr_email}`}>{hr_email}</a>
+        <h2 class="text-xl md:text-2xl mb-8">Responsable de l'offre</h2>
+        <p class="text-2xl md:text-3xl mb-8">{hr_name}</p>
+        <a class="font-normal md:text-lg hover:underline hover:underline-offset-4" href={`tel:${hr_phone}`}>{hr_phone}</a><br />
+        <a class="font-normal md:text-lg hover:underline hover:underline-offset-4" href={`mailto:${hr_email}`}>{hr_email}</a>
     </div>
 </div>
