Size appropriately tap targets

--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -14,7 +14,7 @@
                         <p>59 rue Beaubourg</p>
                         <p>75003 Paris</p>
                     </div>
-                    <div class="flex flex-col">
+                    <div class="flex flex-col gap-1 lg:gap-0">
                         <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:contact@wearelog.fr">contact@log.consulting</a>
                         <a class="decoration-2 hover:underline hover:underline-offset-4" href="mailto:recrutement@wearelog.fr">recrutement@log.consulting</a>
                     </div>
