--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,6 +15,7 @@ const { title } = Astro.props;
         <title>{title}</title>
         <link rel="icon" href="/favicon.svg" type="image/svg+xml"> {/* Modern browsers */}
         <link rel="icon" href="/favicon.ico" type="image/x-icon"> {/* Fallback for older browsers */}
+        <link rel="sitemap" href="/sitemap-index.html" />
     </head>
     <body class="text-black bg-white">
         <Header />
