Update text content of homepage

--- a/src/components/homepage/section_numbers.astro
+++ b/src/components/homepage/section_numbers.astro
@@ -13,9 +13,9 @@ import SectionTitle from '@components/ui/section_title.astro';
     </SectionTitle>
 
     <div class="flex flex-col lg:flex-row justify-center gap-6">
-        <Number number="20" description="Est consectetur dolores ea dolor." />
-        <Number number="+156" description="Ex consequatur quasi non asperiores veniam." />
-        <Number number="290" description="Neque voluptas eos optio distinctio." />
-        <Number number="3" description="Sed provident distinctio ex harum assumenda." />
+        <Number number="4" description="Années d'existence" />
+        <Number number="20+" description="Collaborateurs" />
+        <Number number="> 2M €" description="Chiffre d'Affaires" />
+        <Number number="30 %" description="Croissance annuelle" />
     </div>
 </section>
