--- a/src/components/homepage/section_wearelog.astro
+++ b/src/components/homepage/section_wearelog.astro
@@ -15,7 +15,7 @@ import PhotoSommaireReference from '@static/photo-sommaire.avif';
                 </h1>
                 <img class="hidden md:block w-auto h-[3rem] ml-6" src={PictoOrdinateurReference} width="96" height="66" alt="" />
             </div>
-            <p class="font-bold text-2xl mt-8">Les Loggers, une équipe de consultants au top de l'expertise en technologies Cloud et culture DevOps.</p>
+            <p class="font-bold text-2xl mt-8">Pure player du Conseil et de l'Expertise technique en technologies Cloud et culture DevOps</p>
         </div>
     </div>
 </section>
