--- a/src/components/homepage/section_expertise.astro
+++ b/src/components/homepage/section_expertise.astro
@@ -9,8 +9,7 @@ import HommeCourseOrdinateurReference from '@static/homme-course-ordinateur.avif
     <div class="flex flex-col lg:flex-row">
         <div class="flex lg:w-[33vw] justify-center lg:justify-end bg-black text-white">
             <div class="flex flex-col gap-5 mt-10 mb-56 lg:mt-24 lg:mr-[4vw] text-5xl font-extrabold">
-                <h1>SAVOIR</h1>
-                <h1>FAIRE</h1>
+                <h1>L'ADN</h1>
                 <span class="sr-only">LOG</span>
                 <svg class="w-36 h-20 fill-blue-log" viewBox="0 0 214.89 120.37"><path d="M19.14 65.64V.11H0v82.7h50.5V65.64z"/><path d="M86.62.18c-23.73 0-43 18.75-43 42.38a42.39 42.39 0 0 0 6.43 23.08 4.33 4.33 0 0 0 .47.73c7.65 11.54 21 18.41 36.39 18.41 26.51 0 42.35-18.88 42.35-42.22C129.23 19.06 111.5.18 86.62.18zm-.26 67.95c-14.83 0-24.15-11.83-24.15-25.44s9.44-25.44 24.15-25.44c16.52 0 24.38 12.06 24.38 25.7s-8.64 25.18-24.38 25.18z"/><path d="M197.83 0v8.19a43 43 0 0 0-25.57-8c-23.73 0-43 18.75-43 42.38 0 21.27 13.54 36.59 32.16 41 .13 0 .29.08.44.1a40 40 0 0 0 9.65 1.17h1c9.78 0 18.1-2.57 24.72-7 .05 1.56.08 3.14.08 4.9 0 12.19-6.17 21.37-20.2 21.37-21.11 0-21.37-14.68-21.37-14.68H137.5c.91 16.39 14.55 30.94 37.89 30.94 22 0 39.5-11.26 39.5-39.08V0zM172 68.13a25.83 25.83 0 0 1-3.81-.29c-12.58-1.84-20.31-12.76-20.31-25.16 0-13.64 9.44-25.44 24.12-25.44h1.48.02c15.48.73 22.87 12.45 22.87 25.68.03 13.67-8.63 25.21-24.37 25.21z"/></svg>
             </div>
@@ -19,17 +18,17 @@ import HommeCourseOrdinateurReference from '@static/homme-course-ordinateur.avif
             <div class="flex flex-col lg:max-w-none gap-8 px-4 pt-64 pb-16 lg:pl-[15vw] lg:pr-[17vw] lg:py-24 z-20 md:text-center lg:text-left">
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">Les expertises</h1>
-                    <p class="text-normal text-xl lg:text-2xl">Lorem ipsum dolor sit amet. Aut inventore fuga aut eius eveniet sed voluptates voluptatem id iste reprehenderit qui minima assumenda.</p>
+                    <p class="text-normal text-xl lg:text-2xl">Accélérer et sécuriser la transformation des organisations en les guidant dans l'adoption des technologies Cloud et de la philosophie DevOps : Audits, Stratégie, Roadmap ? Conception, Architecture ? Gestion de projets techniques ? Automatisation, CI/CD ? C’est le métier de LOG !</p>
                     <a class="bg-red-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2 w-fit" href="/expertise">Découvrir nos expertises</a>
                 </div>
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">Les métiers</h1>
-                    <p class="text-normal text-xl lg:text-2xl">Lorem ipsum dolor sit amet. Aut inventore fuga aut eius eveniet sed voluptates voluptatem id iste reprehenderit qui minima assumenda.</p>
+                    <p class="text-normal text-xl lg:text-2xl">Nos stacks technologiques ? Les technologies Cloud et l’écosystème DevOps ! Cloud Providers, Hyperscalers, Orchestration, Conteneurisation, Automatisation. C’est le quotidien de LOG !</p>
                     <a class="bg-blue-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2 w-fit" href="/metiers">Découvrir nos métiers</a>
                 </div>
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">L'engagement</h1>
-                    <p class="text-normal text-xl lg:text-2xl">Lorem ipsum dolor sit amet. Aut inventore fuga aut eius eveniet sed voluptates voluptatem id iste reprehenderit qui minima assumenda.</p>
+                    <p class="text-normal text-xl lg:text-2xl">Aujourd'hui, il est impensable de ne plus tenir compte des impacts, bien réels, du numérique sur notre environnement et sur nos sociétés... Accompagner nos clients vers un Numérique Responsable, c'est l'un des pilliers fondateurs de LOG !</p>
                     <a class="bg-green-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2 w-fit" href="/engagements">Découvrir notre engagement</a>
                 </div>
             </div>
